see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Aug-2010 Jean-Marie Simonet
 # [#22050] useful joomla links menu. Thanks Bill.
 # [#22046] cannot unblock users. Thanks Michael and Dennis.

30-Aug-2010 Andrew Eddie
 # Fixed issue [#21952] JButtonLink does not set toolbar id correctly (Daniel Reibelt, Hannes Papenberg).
 # Fixed issue [#21868] 500 bad query error on saving a template style not assigned to anything (Elin Waring).
 # Fixed issue [#20468] Featured Articles editing returns to articles pages (Greg Daynes, Hannes Papenberg).
 # Fixed issue [#21999] Error on creating a group with an existing name (Elin Waring).
 # Fixed issue [#22102] E-mail field in contact editing does not validate (Roland Dalmulder).

29-Aug-2010 Jean-Marie Simonet
 # [#22023] Enlarge inputbox for article title on modal select. 
 # [#22104] hathor col fix. Thanks Bill.

28-Aug-2010 Mark Dexter
 # [#17689] Menu Creation - "Contained in Menu" set to main menu
 # [#21819] Cannot save editted article using frontend with cache enabled

28-Aug-2010 Jean-Marie Simonet
 # [#22048] manager column order inconsistency. Thanks Bill.
 # [#21891] Refactoring Article Options. Thanks Bill.

27-Aug-2010 Mark Dexter
 # Revert issue [#17689] Menu Creation - "Contained in Menu" set to main menu

27-Aug-2010 Jean-Marie Simonet
 # [#22020] Move Template Positions Parameter tp=1 into Template Options from Global Configuration. Thanks Amy, Hannes, Michael.
 $ [#22084] Publishing Options Language changes and inconsistencies. Thanks Bill.

27-Aug-2010 Andrew Eddie